<resources>
    <string name="app_name">SmartPoster</string>
    <string name="welcome_text">Welcome to our Smart Poster for Online Campaigns</string>
    <string name="floss_text">Politicians all over Kenya use SmartPoster for e-campaign and turn their dreams to reality</string>
    <string name="start_text">Start</string>
    <string name="hello_blank_fragment">New Fragment In Town</string>
    <string name="caret_down">Caret Down</string>
    <string name="top_aspirants">Top Aspirants</string>
    <string name="public_dash_title">Public</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_avatar">User Avatar</string>
    <string name="username">Username</string>
    <string name="more_vertical">More Vertical</string>
    <string name="post_image">Post Image</string>
    <string name="comment">Comment</string>
    <string name="default_post">The post caption should be in this TextView should be dark and it\'s appearance should be medium...</string>
    <string name="like_button_image">Like Button Image</string>
    <string name="share_button_image">Share Button Image</string>
    <string name="view_comments">View Comments</string>
    <string name="read_more">Read More...</string>
    <string name="default_likes">10 likes</string>
    <string name="title_activity_blog_post">Posts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="or">OR</string>
    <string name="email_address_hint">Email Address...</string>
    <string name="password_hint">Password...</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="info_button">Info Button</string>
    <string name="confirm_password_hint">Confirm Password...</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="login_text">Log In</string>
    <string name="posts">Posts</string>
    <string name="aspirants">Aspirants</string>
    <string name="account">Account</string>
    <string name="chats">Chats</string>
    <string name="profile_image">Profile Image</string>
    <string name="more_vert">More Vert</string>
    <string name="edit">Edit</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="county">County</string>
    <string name="county_name">County Name...</string>
    <string name="location">Location</string>
    <string name="constituency_name">Constituency Name...</string>
    <string name="constituency">Constituency</string>
    <string name="ward_name">Ward Name...</string>
    <string name="ward">Ward</string>
    <string name="contact">Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="name_hint">Name...</string>
    <string name="camera">Camera</string>
    <string name="change">Change</string>
    <string name="finish">Finish</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="caption">Message...</string>
    <string name="attach_file">Attach File</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="new_post">New Post</string>
    <string name="video_library">Video Library</string>
    <string name="photo_library">Photo Library</string>
    <string name="library_books">Library Books</string>
    <string name="photo">Photo</string>
    <string name="document">Document</string>
    <string name="video">Video</string>
    <string name="favourites">Favourites</string>
    <string name="all_posts">All Posts</string>
    <string name="choose_image">Choose Image</string>
    <string name="next">Next</string>
    <string name="crop_image">Crop Image</string>
    <string name="add_caption_hint">Add Caption...</string>
    <string name="submit_post">Submit Post</string>
    <string name="add_post">Add Post</string>

    <string-array name="aspirant_positions">
        <item>-- Position --</item>
        <item>President</item>
        <item>Governor</item>
        <item>Senator</item>
        <item>Member of Parliament</item>
        <item>Member of County Assembly</item>
    </string-array>

    <string name="web_client_id">664728315877-imkqm50p0pggru57om9n06b41qhmik5u.apps.googleusercontent.com</string>
    <string name="web_client_secret">Mt2VKDYuO5Q29VvDI2dbVPmQ</string>
    <string name="person_icon">Person Icon</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="public_icon">Public Icon</string>
    <string name="website">Website</string>
    <string name="nickname">Nickname...</string>
    <string name="name">Name</string>
    <string name="official_name">Official Name...</string>
    <string name="request_candidature">Request Candidature</string>
    <string name="area_you_are_vying">Area you Are Vying...</string>
    <string name="send_request">Send Request</string>
    <string name="applications">Applications</string>
    <string name="feedback">Feedback</string>
    <string name="post_date">Post Date...</string>
    <string name="all_users">All Users</string>
    <string name="message">Message...</string>
    <string name="send_icon">Send Icon</string>
    <string name="dummy_message">Dummy Message</string>
    <string name="last_msg">This is the mUserUids last message...</string>

</resources>

