<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_avatar_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_circle_gray_48dp" />

        <TextView
            android:id="@+id/owner_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:padding="@dimen/std_tv_pad"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toEndOf="@+id/user_avatar_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/more_vert_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            android:contentDescription="@string/more_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/owner_username_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert_black_24dp" />

        <ImageView
            android:id="@+id/post_image_iv"
            android:layout_width="0dp"
            android:layout_height="256dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar_iv"
            app:srcCompat="@mipmap/avatar" />

        <ImageButton
            android:id="@+id/comment_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:contentDescription="@string/comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_image_iv"
            app:srcCompat="@drawable/ic_mode_comment_gray_24dp" />

        <ImageButton
            android:id="@+id/share_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:contentDescription="@string/share_button_image"
            app:layout_constraintStart_toEndOf="@+id/comment_iv"
            app:layout_constraintTop_toBottomOf="@+id/post_image_iv"
            app:srcCompat="@drawable/ic_share_gray_24dp" />

        <ImageButton
            android:id="@+id/like_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="248dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:contentDescription="@string/like_button_image"
            app:layout_constraintStart_toEndOf="@+id/share_ib"
            app:layout_constraintTop_toBottomOf="@+id/post_image_iv"
            app:srcCompat="@drawable/ic_mood_mood_24dp" />

        <TextView
            android:id="@+id/post_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/default_post"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_ib" />

        <TextView
            android:id="@+id/read_more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/read_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_comments_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_tv" />

        <TextView
            android:id="@+id/view_comments_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/view_comments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_tv" />

        <TextView
            android:id="@+id/likes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/default_likes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/like_ib"
            app:layout_constraintTop_toBottomOf="@+id/post_image_iv" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>